--- a/config.toml
+++ b/config.toml
@@ -123,18 +123,21 @@ I've made impact at each organization I've served. I've grown influence, establi
 
 ## A bit about me
 
-<div style="margin: 2rem 0;">
-    <div style="display: grid; gap: 1.5rem; max-width: 600px; margin: 0 auto;">
-        <div style="text-align: center; margin: 2rem 0;">
-            <div style="font-size: 1.2rem; font-weight: 300; line-height: 1.5; color: var(--primary); font-style: italic; margin-bottom: 1.5rem;">
-                <span style="font-size: 1.5rem; color: var(--secondary); opacity: 0.6;">"</span>Learning is my great passion and curiosity is my ultimate drive.<span style="font-size: 1.5rem; color: var(--secondary); opacity: 0.6;">"</span>
-            </div>
-        </div>
-        <div style="padding: 1.5rem; background-color: var(--entry); border-radius: 8px; text-align: center;">
-            <p style="line-height: 1.6; margin-bottom: 1rem;">I like to read, I play instruments, I love to BBQ, and even though I can no longer spend significant time to do it, I can't stop coding.</p>
-            <a href="/about" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px; font-weight: 500;">Learn more about me →</a>
-        </div>
+<div style="margin-top: 2rem;"></div>
+
+I like to read, I play instruments, I love to BBQ, and even though I can no longer spend significant time to do it, I can't stop coding.
+
+<div style="text-align: center; margin-top: 2rem;">
+    <a href="/about" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px; font-weight: 500;">Learn more about me →</a>
+</div>
+
+<div style="text-align: center; margin: 3rem 0; position: relative;">
+    <div style="font-size: 1.3rem; font-weight: 300; line-height: 1.5; color: var(--primary); font-style: italic; position: relative; max-width: 700px; margin: 0 auto;">
+        <span style="font-size: 1.8rem; color: var(--secondary); opacity: 0.6; position: absolute; left: -1rem; top: -0.3rem;">"</span>
+        Learning is my great passion and curiosity is my ultimate drive.
+        <span style="font-size: 1.8rem; color: var(--secondary); opacity: 0.6; position: absolute; right: -1rem; bottom: -0.3rem;">"</span>
     </div>
+    <div style="width: 40px; height: 2px; background: var(--secondary); margin: 1rem auto 0; opacity: 0.5;"></div>
 </div>
 """
 
