--- a/config.toml
+++ b/config.toml
@@ -112,13 +112,8 @@ I helped building effective teams at organizations like <a href="https://tech.wa
 
 I've made impact at each organization I've served. I've grown influence, established essential infrastructure, shaped culture, hired and cultivated talent, built new teams, and led the creation of life-changing products.
 
-<div style="text-align: center; margin: 3rem 0; position: relative;">
-    <div style="font-size: 1.3rem; font-weight: 300; line-height: 1.5; color: var(--primary); font-style: italic; position: relative; max-width: 700px; margin: 0 auto;">
-        <span style="font-size: 1.8rem; color: var(--secondary); opacity: 0.6; position: absolute; left: -1rem; top: -0.3rem;">"</span>
-        Platforms can be more than functional - they can inspire our thinking and enable us to do things that we didn't know we could before.
-        <span style="font-size: 1.8rem; color: var(--secondary); opacity: 0.6; position: absolute; right: -1rem; bottom: -0.3rem;">"</span>
-    </div>
-    <div style="width: 40px; height: 2px; background: var(--secondary); margin: 1rem auto 0; opacity: 0.5;"></div>
+<div style="text-align: center; margin: 2rem 0;">
+    <p style="font-size: 1.2rem; font-weight: 300; line-height: 1.6; color: var(--secondary); font-style: italic; max-width: 700px; margin: 0 auto;">"Platforms can be more than functional - they can inspire our thinking and enable us to do things that we didn't know we could before."</p>
 </div>
 
 ## A bit about me
@@ -127,17 +122,12 @@ I've made impact at each organization I've served. I've grown influence, establi
 
 I like to read, I play instruments, I love to BBQ, and even though I can no longer spend significant time to do it, I can't stop coding.
 
-<div style="text-align: center; margin-top: 2rem;">
-    <a href="/about" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px; font-weight: 500;">Learn more about me →</a>
+<div style="text-align: center; margin: 2rem 0;">
+    <p style="font-size: 1.2rem; font-weight: 300; line-height: 1.6; color: var(--secondary); font-style: italic; max-width: 700px; margin: 0 auto;">"Learning is my great passion and curiosity is my ultimate drive."</p>
 </div>
 
-<div style="text-align: center; margin: 3rem 0; position: relative;">
-    <div style="font-size: 1.3rem; font-weight: 300; line-height: 1.5; color: var(--primary); font-style: italic; position: relative; max-width: 700px; margin: 0 auto;">
-        <span style="font-size: 1.8rem; color: var(--secondary); opacity: 0.6; position: absolute; left: -1rem; top: -0.3rem;">"</span>
-        Learning is my great passion and curiosity is my ultimate drive.
-        <span style="font-size: 1.8rem; color: var(--secondary); opacity: 0.6; position: absolute; right: -1rem; bottom: -0.3rem;">"</span>
-    </div>
-    <div style="width: 40px; height: 2px; background: var(--secondary); margin: 1rem auto 0; opacity: 0.5;"></div>
+<div style="text-align: center; margin-top: 2rem;">
+    <a href="/about" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px; font-weight: 500;">Learn more about me →</a>
 </div>
 """
 
