--- a/config.toml
+++ b/config.toml
@@ -126,7 +126,7 @@ I like to read, I play instruments, I love to BBQ, and even though I can no long
     <p style="font-size: 1.2rem; font-weight: 300; line-height: 1.6; color: var(--secondary); font-style: italic; max-width: 700px; margin: 0 auto;">"Learning is my great passion and curiosity is my ultimate drive."</p>
 </div>
 
-<div style="text-align: center; margin-top: 2rem;">
+<div style="text-align: center; margin: 1rem 0 3rem 0;">
     <a href="/about" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px; font-weight: 500;">Learn more about me →</a>
 </div>
 """
