--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,9 @@ home_title = "Lijun Zhu"
 home_content = """
 <div style="display: flex; align-items: center; gap: 3rem; margin: 3rem 0; max-width: 800px; margin-left: auto; margin-right: auto; flex-wrap: wrap; justify-content: center;">
     <div style="flex-shrink: 0;">
-        <img src="/processed_images/lijun.7e7404b01739a660.jpg" alt="Lijun Profile Picture" style="width: 200px; height: 200px; border-radius: 50%; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+        <div style="width: 200px; height: 200px; border-radius: 50%; overflow: hidden; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+            {{ resize_image(path="images/lijun.jpg", width=200, height=200, op="fill", alt="Lijun Profile Picture") }}
+        </div>
     </div>
     <div style="flex: 1; min-width: 300px; text-align: left; position: relative;">
         <div style="font-size: 1.6rem; font-weight: 300; line-height: 1.5; color: var(--primary); font-style: italic; position: relative;">
