--- a/config.toml
+++ b/config.toml
@@ -31,8 +31,8 @@ highlight_theme = "one-dark"
 [search]
 index_format = "elasticlunr_json"
 
-title = "Lijun Zhu's Blog"
-description = "Personal blog about programming, AI, and technology"
+title = "Lijun Zhu | Tech Leadership"
+description = "Tech leadership insights, AI innovation, and team building expertise from a Director of Computer Vision"
 
 [extra]
 # Put all your custom variables here
@@ -40,11 +40,11 @@ author = "Lijun Zhu"
 
 # PaperMod theme configuration
 [extra.papermod]
-title = "Lijun Zhu's Blog"
+title = "Lijun Zhu | Tech Leadership"
 default_theme = "auto"
 theme = "light"
 language_direction = "ltr"
-keywords = ["programming", "AI", "technology", "machine learning"]
+keywords = ["tech leadership", "AI", "computer vision", "machine learning", "team building", "engineering management", "technology innovation"]
 show_theme_toggle = true
 show_scroll_to_top = true
 show_code_copy_buttons = true
@@ -118,7 +118,7 @@ I helped building effective teams at organizations like <a href="https://tech.wa
 
 <div style="margin-top: 2rem;"></div>
 
-I've made impact at each organization I've served. I've grown influence, established essential infrastructure, shaped culture, hired and cultivated talent, built new teams, and led the creation of life-changing products.
+As Director of Computer Vision at <a href="https://tech.walmart.com/content/walmart-global-tech/en_us.html" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">Walmart Global Tech</a>, I've led high-performing teams to deliver cutting-edge AI solutions, scaling machine learning initiatives that drive business impact. With experience building effective engineering organizations at <a href="https://www.ti.com/" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">Texas Instruments</a> and <a href="https://www.gatech.edu/" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">Georgia Tech</a>, I specialize in fostering innovation, talent development, and cross-functional collaboration in fast-paced tech environments. As an open-source contributor to projects like <a href="https://numpy.org/" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">NumPy</a>, <a href="https://github.com/obspy/obspy" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">ObsPy</a>, and <a href="https://pytorch.org/" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">PyTorch</a>, I'm passionate about advancing AI technologies—let's connect to explore leadership opportunities.
 
 <div style="text-align: center; margin: 2rem 0;">
     <p style="font-size: 1.2rem; font-weight: 300; line-height: 1.6; color: var(--secondary); font-style: italic; max-width: 700px; margin: 0 auto;">"Platforms can be more than functional - they can inspire our thinking and enable us to do things that we didn't know we could before."</p>
