--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://lijunzhu.info"
+base_url = "http://lijunzhu.info"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = false
