--- a/config.toml
+++ b/config.toml
@@ -73,7 +73,7 @@ home_content = """
     </div>
 </div>
 
-I helped building effective teams at organizations like <a href="https://tech.walmart.com/content/walmart-global-tech/en_us.html" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">Walmart Global Tech</a>, <a href="https://www.ti.com/" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">Texas Instruments</a>, and <a href="https://www.gatech.edu/" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">Georgia Institute of Technology</a>. 
+I helped building effective teams at organizations like <a href="https://tech.walmart.com/content/walmart-global-tech/en_us.html" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">Walmart Global Tech</a> and <a href="https://www.ti.com/" style="color: var(--secondary); text-decoration: underline; text-decoration-color: var(--border); text-underline-offset: 2px;">Texas Instruments</a>. 
 
 
 
